Fixed memory leak in QXmlStreamReader

Fixed memory leak caused by repetitive usage of the same
QXmlStreamReader instance.

Task-number: QTBUG-27889
Change-Id: I673f4d26bae1503cb43e972f95b418dbf6d6fd89
Reviewed-by: Olivier Goffart <ogoffart@woboq.com>
Reviewed-by: Jędrzej Nowacki <jedrzej.nowacki@digia.com>